--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Krashr API",
+  "name": "Krashr",
   "private": true,
   "version": "0.5.0",
   "description": "An API to search vulnerabilities within webpages",
@@ -18,6 +18,6 @@
     "postinstall": "bower install",
 
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
+    "start": "http-server -a localhost -p 8000 -c-1"
   }
 }
